--- a/package.json
+++ b/package.json
@@ -8,13 +8,16 @@
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.2",
     "formik": "^2.1.5",
-    "node-sass": "^4.13.1",
+    "node-sass": "^4.14.1",
+    "rambda": "^5.9.0",
+    "ramda": "^0.27.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
-    "redux": "^4.0.5"
+    "redux": "^4.0.5",
+    "redux-actions": "^2.6.5"
   },
   "scripts": {
     "start": "react-scripts start",
