--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.2",
+    "event-target-shim": "^5.0.1",
     "formik": "^2.1.5",
     "node-sass": "^4.14.1",
     "rambda": "^5.9.0",
