--- a/package.json
+++ b/package.json
@@ -18,10 +18,11 @@
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
+    "react-router-redux": "^4.0.8",
     "react-scripts": "^3.4.3",
     "redux": "^4.0.5",
     "redux-actions": "^2.6.5",
-    "redux-thunk": "^2.3.0",
+    "redux-saga": "^1.1.3",
     "seamless-immutable": "^7.1.4",
     "yup": "^0.29.3"
   },
