--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "yup": "^0.29.3"
   },
   "scripts": {
-    "start:pord": "REACT_APP_ENV=prod react-scripts start",
+    "start:prod": "REACT_APP_ENV=prod react-scripts start",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
