--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.19.2",
     "event-target-shim": "^5.0.1",
     "formik": "^2.1.5",
+    "moment": "^2.29.1",
     "node-sass": "^4.14.1",
     "rambda": "^5.9.0",
     "ramda": "^0.27.1",
