Added app-level notifications support

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "formik": "^2.1.5",
     "moment": "^2.29.1",
     "node-sass": "^4.14.1",
+    "notistack": "^1.0.2",
     "rambda": "^5.9.0",
     "ramda": "^0.27.1",
     "react": "^16.13.1",
